--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -76,7 +76,7 @@
       <enum>QTabWidget::West</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -1072,8 +1072,8 @@ per pixel:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>249</width>
-            <height>1037</height>
+            <width>545</width>
+            <height>1025</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -2019,8 +2019,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>274</width>
-            <height>379</height>
+            <width>545</width>
+            <height>1025</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -2688,9 +2688,9 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>0</y>
+            <y>-805</y>
             <width>527</width>
-            <height>1830</height>
+            <height>1854</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_41">
@@ -4141,7 +4141,7 @@ of lights:</string>
                 <property name="spacing">
                  <number>2</number>
                 </property>
-                <item row="6" column="0" rowspan="3">
+                <item row="7" column="0" rowspan="3">
                  <widget class="QLabel" name="label_95">
                   <property name="text">
                    <string>Orbit trap center:</string>
@@ -4167,7 +4167,7 @@ of lights:</string>
                 <item row="4" column="0">
                  <widget class="QLabel" name="label_94">
                   <property name="text">
-                   <string>Thickness:</string>
+                   <string>Softness:</string>
                   </property>
                  </widget>
                 </item>
@@ -4246,7 +4246,7 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="7" column="1">
+                <item row="8" column="1">
                  <widget class="QLabel" name="label_97">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4276,14 +4276,14 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="6" column="2">
+                <item row="7" column="2">
                  <widget class="MyLineEdit" name="vect3_fake_lights_orbit_trap_x">
                   <property name="toolTip">
                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Position of orbit trap point&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
-                <item row="6" column="1">
+                <item row="7" column="1">
                  <widget class="QLabel" name="label_96">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4299,14 +4299,14 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="7" column="2">
+                <item row="8" column="2">
                  <widget class="MyLineEdit" name="vect3_fake_lights_orbit_trap_y">
                   <property name="toolTip">
                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Position of orbit trap point&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
-                <item row="8" column="1">
+                <item row="9" column="1">
                  <widget class="QLabel" name="label_98">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4322,21 +4322,21 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="8" column="2">
+                <item row="9" column="2">
                  <widget class="MyLineEdit" name="vect3_fake_lights_orbit_trap_z">
                   <property name="toolTip">
                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Position of orbit trap point&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
-                <item row="13" column="0">
+                <item row="14" column="0">
                  <widget class="QLabel" name="label_45">
                   <property name="text">
                    <string>Color:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="13" column="2">
+                <item row="14" column="2">
                  <widget class="MyColorButton" name="colorButton_fake_lights_color" native="true">
                   <property name="toolTip">
                    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Color of light source&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -4346,14 +4346,14 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="5" column="0">
+                <item row="6" column="0">
                  <widget class="QLabel" name="label_104">
                   <property name="text">
                    <string>Shape:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="10" column="2">
+                <item row="11" column="2">
                  <widget class="MyDoubleSpinBox" name="spinboxd3_fake_lights_orbit_rotation_x">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -4381,10 +4381,10 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="9" column="2">
+                <item row="10" column="2">
                  <widget class="MyLineEdit" name="logedit_fake_lights_orbit_trap_size"/>
                 </item>
-                <item row="11" column="2">
+                <item row="12" column="2">
                  <widget class="MyDoubleSpinBox" name="spinboxd3_fake_lights_orbit_rotation_y">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -4412,14 +4412,14 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="9" column="0">
+                <item row="10" column="0">
                  <widget class="QLabel" name="label_105">
                   <property name="text">
                    <string>Shape size:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="5" column="2">
+                <item row="6" column="2">
                  <widget class="MyComboBox" name="comboBox_fake_lights_orbit_trap_shape">
                   <item>
                    <property name="text">
@@ -4438,7 +4438,7 @@ of lights:</string>
                   </item>
                  </widget>
                 </item>
-                <item row="12" column="2">
+                <item row="13" column="2">
                  <widget class="MyDoubleSpinBox" name="spinboxd3_fake_lights_orbit_rotation_z">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -4466,7 +4466,7 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="12" column="1">
+                <item row="13" column="1">
                  <widget class="QLabel" name="label_108">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4482,7 +4482,7 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="11" column="1">
+                <item row="12" column="1">
                  <widget class="QLabel" name="label_107">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4498,7 +4498,7 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="10" column="1">
+                <item row="11" column="1">
                  <widget class="QLabel" name="label_106">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -4514,10 +4514,24 @@ of lights:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="10" column="0" rowspan="3">
+                <item row="11" column="0" rowspan="3">
                  <widget class="QLabel" name="label_102">
                   <property name="text">
                    <string>Shape rotation:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="0">
+                 <widget class="QLabel" name="label_109">
+                  <property name="text">
+                   <string>Relative thickness:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="2">
+                 <widget class="MyLineEdit" name="logedit_fake_lights_thickness">
+                  <property name="toolTip">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Brightness of visible lights&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
@@ -4607,8 +4621,8 @@ of lights:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>167</width>
-            <height>109</height>
+            <width>545</width>
+            <height>1017</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
